# doccano

./: .coveragerc  .deepsource.toml  .dockerignore  .flake8  .gitattributes  .gitignore  .hadolint.yaml  .travis.yml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HOW_TO_CONTRIBUTE.md  INSTALLATION.md  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  Makefile  Pipfile  Procfile  README.md  ROADMAP.md  USAGE.md  app.json  awsdeploy.yml  azure-pipelines.yaml  azuredeploy.json  cloudbuild.yaml  deploy.sh  doccano.db  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  environment.yml  heroku.yml  index.html  ipSearch.sh  mkdocs.yml  offline_01_download.sh  offline_02_extract.sh  (+23 more)
backend/: .dockerignore  Dockerfile.dev  Dockerfile.prod  README.md  cli.py  doccano  manage.py  pyproject.toml  test_reportlab.py
backend/annotations/: __init__.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/annotations/migrations/: 0001_initial.py
backend/api/: admin.py  apps.py  celery_tasks.py  exceptions.py  filters.py  managers.py  middleware.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_comment.py  0002_project_single_class_classification.py  0002_speech2text.py  0004_merge_20210114_1117.py  0005_auto_20210120_1730.py  0005_auto_20210201_0603.py  0006_merge_20210221_1258.py  0007_auto_20210301_0302.py  0009_annotations_relations_20210421_1445.py  0009_auto_20210411_2330.py  0009_tag.py  0010_auto_20210413_0249.py  0011_merge_0009_tag_0010_auto_20210413_0249.py  0012_auto_20210514_0654.py  0013_merge_20210528_1016.py  0014_auto_20210603_0438.py  0015_examplestate.py  0016_auto_20211018_0556.py  0017_alter_example_id.py  0017_example_uuid.py  0018_alter_label_background_color.py  0019_auto_20211124_0506.py  0020_auto_20211220_2327.py  0020_auto_20211221_1415.py  0020_label_task_type.py  0021_auto_20211209_0644.py  0021_auto_20211220_2355.py  0021_auto_20211221_0553.py  0021_auto_20211221_1416.py  0022_auto_20211210_0052.py  0022_auto_20211220_2355.py  0022_auto_20211221_1430.py  0023_auto_20211221_0623.py  0023_auto_20211221_1430.py  0024_auto_20211221_1444.py  0025_auto_20211222_0454.py  0025_auto_20220107_0158.py  0026_auto_20220107_0200.py  0027_auto_20211222_0454.py  (+10 more)
backend/api/tests/: test_api.py  test_category.py  test_config.py  test_filters.py  test_middleware.py  test_models.py  test_serializers.py  test_span.py  test_tasks.py  test_text_label.py  test_utils.py  utils.py
backend/api/views/: __init__.py  annotation.py  annotation_relations.py  auto_labeling.py  comment.py  document.py  example.py  example_state.py  export_dataset.py  health.py  image.py  import_dataset.py  import_export.py  label.py  project.py  relation_types.py  role.py  statistics.py  tag.py  user.py
backend/app/: celery.py  settings.py  urls.py
backend/authentification/: forms.py  urls.py  utils.py  views.py
backend/authentification/templates/: email_not_set.html  password_reset_subject.txt  validate_mail_address_invalid.html
backend/authentification/tests/: test_activate.py
backend/auto_labeling/: __init__.py  admin.py  apps.py  exceptions.py  models.py  serializers.py  urls.py  views.py
backend/auto_labeling/migrations/: 0001_initial.py  0002_autolabelingconfig_task_type.py  0003_fill_task_type.py  0004_alter_autolabelingconfig_project.py
backend/auto_labeling/pipeline/: execution.py  labels.py
backend/auto_labeling/tests/: test_views.py
backend/client/: dist
backend/client/_nuxt/: 0363c8a.js  061d010.js  08039fb.js  0d1dc4d.js  0e2c9ae.js  111f10a.js  1944897.js  1a9a954.js  2097bb4.js  28ad868.js  2d891f0.js  2fc2f50.js  4137a89.js  45d6e03.js  45f2328.js  472e0ff.js  489969b.js  4a49d9e.js  4e3c539.js  4feb51d.js  5319b8c.js  5324b1d.js  534f3f8.js  53ecd5c.js  5f976d1.js  628797f.js  633263b.js  659e3b9.js  7a1c7df.js  7aed77e.js  7c5c6d0.js  7cf8f41.js  7e55544.js  8c34ba6.js  925e88c.js  92a46a1.js  984379e.js  99c314f.js  9d2aace.js  LICENSES  (+17 more)
backend/config/: celery.py  settings.py  urls.py  wsgi.py
backend/config/settings/: aws.py  base.py  development.py  gcp.py  heroku.py  production.py
backend/data_export/: apps.py  celery_tasks.py  models.py  urls.py  views.py
backend/data_export/migrations/: 0002_exportedboundingbox.py  0004_exportedcomment.py
backend/data_export/pipeline/: catalog.py  comments.py  data.py  dataset.py  examples.py  factories.py  formatters.py  labels.py  repositories.py  services.py  writers.py
backend/data_export/tests/: test_catalog.py  test_dataset.py  test_labels.py  (+6 more)
backend/data_import/: apps.py  celery_tasks.py  datasets.py  models.py  urls.py  views.py
backend/disagreements/: models.py  serializers.py  urls.py  views.py
backend/discussions/: models.py  serializers.py  urls.py  views.py
backend/examples/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py
backend/groups/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/label_types/: admin.py  apps.py  exceptions.py  models.py  serializers.py  urls.py  views.py
backend/labels/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/members/: apps.py  models.py  permissions.py  signals.py  tests.py  views.py
backend/metrics/: apps.py  tests.py  urls.py  views.py
backend/perspectives/: models.py  serializers.py  urls.py  views.py
backend/projects/: admin.py  apps.py  exceptions.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py
backend/roles/: admin.py  apps.py  exceptions.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/server/: forms.py  middleware.py  urls.py  views.py
backend/social/: apps.py  okta.py  urls.py  v1_urls.py  views.py
backend/users/: CustomRegisterSerializer,py  adapters.py  apps.py  custom_serializers.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/voting/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
(+2087 files in other folders)
